--- a/index.html
+++ b/index.html
@@ -3,15 +3,23 @@
   <link rel ="stylesheet" href="css/meuestilo.css">
 </head>
 <html>
-    <body>
-        <div class="bandeira">
-            <div  class="primeiracor"><p class="nome">Nivaldo</p></div>
-            <div class="segundacor"><p class="date">02/10/22</p></div>
-            <div class ="terceiracor"><p class="sobrenome">Felizola</p></div>
-            <div class="father"></div>
-            <div class="jedi"></div>
-        </div>
-       
-    
-    </body>
+<header>
+  <nav class="menu">
+    <ul>
+      <li><a href="#">Sobre</a></li>
+      <li><a href="#">Portfólio</a></li>
+      <li><a href="#">Contato</a></li>
+    </ul>
+  </nav>
+  <h1 class="site-title">Nivaldo Felizola</h1>
+  <h2 class="site-subtitle">Full Stack Developer</h2>
+</header>
+<div class="imagem">
+   <!-- aqui voçe irá colocar a sua imagem pelo CSS, como se faz mesmo ??? 
+        sugestão seria colocar a sua imagem como background image !-->
+   
+</div>
+<footer>
+   <!-- aqui voçe irá colocar o conteúdo que vc quer no rodapé de sua página !-->
+</footer>
 </html>
