--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
   <link rel="icon" href="img/star-wars-ico.png">
-  <link rel ="stylesheet" href="css/meuestilo.css">
+  <link rel ="stylesheet" href="css/estilo.css">
 </head>
 <html>
 <header>
